# oxdna_analysis_tools

./: .gitignore  MANIFEST.in  README.md  __init__.py  align_trajectory.py  all_vectors.py  anm_parametrize.py  backbone_flexibility.py  bond_analysis.py  build.sh  centroid.py  clustering.py  compute_deviations.py  compute_deviations2.py  compute_mean.py  compute_mean2.py  config.py  contact_map.py  distance.py  duplex_angle_finder.py  duplex_angle_plotter.py  eRMSD.py  forces2pairs.py  generate_force.py  mean2dat.py  minify.py  multidimensional_scaling_mean.py  oat-completion.sh  output_bonds.py  p_align.py  pca.py  pca2.py  pca_experimental.py  plot_energy.py  setup.cfg  setup.py  subset_trajectory.py  superimpose.py  test.json
UTILS/: all_vectors.py  base.py  base_array.py  clustering.py  micha_reader.py  parallelize.py  parallelize2.py  parallelize3.py  parallelize_lorenzo_onefile.py  parallelize_old.py  parallelize_old_new.py  readers.py
example_input_files/: README.md  input_relax_MD  input_run
external_force_utils/: exclude_force.py  force_reader.py  forces.py
paper_examples/: README
paper_examples/PCA/: README.md
paper_examples/angles/: README
paper_examples/clustering/: README.md
paper_examples/distances/: README.md
paper_examples/h_bonds/: README  README.md
paper_examples/mds_mean/: README.md
paper_examples/svd_mean/: README  README.md
src/oxDNA_analysis_tools/: __init__.py  align.py  align_trajectory.py  anm_parameterize.py  anm_parametrize.py  backbone_flexibility.py  bond_analysis.py  (+49 more)
tests/: cleanup.sh  input_rna  pairs.txt  test.sh
(+25 files in other folders)
