[metadata]
name = oxDNA_analysis_tools
version = 0.0.7
author = Erik Poppleton
author_email = epopplet@asu.edu
description = Testing distribution of OAT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sulcgroup/oxdna_analysis_tools
project_urls =
    Bug Tracker = https://github.com/sulcgroup/oxdna_analysis_tools/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
		 numpy > 1.16
		 biopython > 1.73
		 pathos > 0.2.3
		 scikit-learn > 0.21.2
		 matplotlib > 3.0.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
		compute_mean = oxDNA_analysis_tools.compute_mean